# obs-midi-mg

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  HELP.md  README.md  buildspec.json
.github/actions/build-plugin/: action.yaml
.github/actions/package-plugin/: action.yaml
.github/actions/run-clang-format/: action.yaml
.github/actions/run-cmake-format/: action.yaml
.github/actions/setup-macos-codesigning/: action.yaml
.github/scripts/: .Brewfile  .build.zsh  .package.zsh  Package-Windows.ps1  build-linux  check-cmake.sh  check-format.sh  package-linux
.github/scripts/utils.zsh/: setup_linux  setup_ubuntu
.github/workflows/: build-project.yaml  main.yml
build-aux/: .run-format.zsh  run-clang-format
cmake/: ObsPluginHelpers.cmake
cmake/bundle/windows/: installer-Windows.iss.in
cmake/common/: bootstrap.cmake  libremidi.cmake
cmake/linux/: defaults.cmake
cmake/macos/resources/: create-package.cmake.in  distribution.in
cmake/windows/: compilerconfig.cmake  helpers.cmake
cmake/windows/resources/: installer-Windows.iss.in
data/locale/: en-US.ini
docs/: README.md  action-docs.md  operations.md
src/: mmg-action-include.h  mmg-action.cpp  mmg-action.h  mmg-binding.cpp  mmg-binding.h  mmg-config.cpp  mmg-config.h  mmg-device.cpp  mmg-device.h  mmg-json.cpp  mmg-json.h  mmg-link.cpp  mmg-link.h  mmg-manager.cpp  mmg-manager.h  mmg-mapping.cpp  mmg-mapping.h  mmg-message.cpp  mmg-message.h  mmg-midi.cpp  mmg-midi.h  mmg-midiin.cpp  mmg-midiin.h  mmg-midiout.cpp  mmg-midiout.h  mmg-obs-object.cpp  mmg-obs-object.h  mmg-params.cpp  mmg-params.h  mmg-preference-defs.cpp  mmg-preference-defs.h  mmg-preference.cpp  mmg-preference.h  mmg-settings.cpp  mmg-settings.h  mmg-signal.cpp  mmg-signal.h  mmg-states.cpp  mmg-states.h  mmg-string.cpp  (+10 more)
src/actions/: mmg-action-audio-sources.cpp  mmg-action-audio-sources.h  mmg-action-collections.cpp  mmg-action-collections.h  mmg-action-filters.cpp  mmg-action-filters.h  mmg-action-hotkeys.cpp  mmg-action-hotkeys.h  mmg-action-internal.cpp  mmg-action-internal.h  mmg-action-media-sources.cpp  mmg-action-media-sources.h  mmg-action-midi.cpp  mmg-action-midi.h  mmg-action-none.cpp  mmg-action-none.h  mmg-action-preferences.cpp  mmg-action-preferences.h  mmg-action-profiles.cpp  mmg-action-profiles.h  mmg-action-record.cpp  mmg-action-record.h  mmg-action-replaybuffer.cpp  mmg-action-replaybuffer.h  mmg-action-scene-items.cpp  mmg-action-scene-items.h  mmg-action-scenes.cpp  mmg-action-scenes.h  mmg-action-sources.cpp  mmg-action-sources.h  mmg-action-stream.cpp  mmg-action-stream.h  mmg-action-studiomode.cpp  mmg-action-studiomode.h  mmg-action-timeout.cpp  mmg-action-timeout.h  mmg-action-transitions.cpp  mmg-action-transitions.h  mmg-action-video-sources.cpp  mmg-action-video-sources.h  (+4 more)
src/forms/: midimg-window.cpp  midimg-window.h  midimg-window.ui  midimg-window.ui.autosave  midimg-window_future.ui
src/forms/echo/: mmg-echo-window.cpp  mmg-echo-window.h  mmg-echo-window.ui
src/forms/legacy/: mmg-legacy-window.cpp  mmg-legacy-window.h  mmg-legacy-window.ui
src/forms/macros/: mmg-window-macros.h
src/macros/: mmg-legacy-window.ui  mmg-window-macros.h
src/messages/: mmg-message-channel-voice.cpp  mmg-message-channel-voice.h  mmg-message-data.cpp  mmg-message-data.h  mmg-message.cpp  mmg-message.h
src/ui/: mmg-action-display.cpp  mmg-action-display.h  mmg-binding-display.cpp  mmg-binding-display.h  mmg-combo-box.cpp  mmg-combo-box.h  mmg-dialog-widgets.cpp  mmg-dialog-widgets.h  mmg-echo-window.cpp  mmg-echo-window.h  mmg-echo-window.ui  mmg-fields.cpp  mmg-fields.h  mmg-lcd-number.cpp  mmg-lcd-number.h  mmg-list-widget.cpp  mmg-list-widget.h  mmg-manager-control.cpp  mmg-manager-control.h  mmg-manager-display.cpp  mmg-manager-display.h  mmg-message-display.cpp  mmg-message-display.h  mmg-midi-buttons.cpp  mmg-midi-buttons.h  mmg-number-display.cpp  mmg-number-display.h  mmg-state-display.cpp  mmg-state-display.h  mmg-state-widget.cpp  mmg-state-widget.h  mmg-string-display.cpp  mmg-string-display.h  mmg-string-widget.cpp  mmg-string-widget.h  mmg-toggle-widget.cpp  mmg-toggle-widget.h  mmg-value-display.cpp  mmg-value-display.h  mmg-value-manager.cpp  (+4 more)
